training screen: fix key event handling wrt to CJK input methods

I must confess that I as an European citizin have only little insights
into the nature of those input methods but at least the behavior of
KTouch is now consistent to the normal Qt input widgets when used with
IBUS: We show the preedit text (which we don't check for errors,
obviously) and the suggestions popup, if there is any, is positioned
right next to the cursor caret there it is supposed to be.

BUG: 194819
FIXED-IN: 2.0